4 5 6 fix